packages/frontend/src/components/transactions/TransactionsListItem.scss
@use '../../styles/mixins.scss';
@use './variables' as txs;
@import '../../styles/variables.scss';

.TransactionsListItem {
  @include mixins.DefListItem;
  display: block;

  &__Content {
    @include txs.Columns();

    &--Inline {
      display: inline !important;
    }
  }

  &__Column {
    @include txs.Column();

    &--Timestamp {
      font-family: $font-mono;
      font-size: 0.75rem;
      white-space: nowrap;
      color: #fff;
    }

    &--Hash, &--Owner {
      color: var(--chakra-colors-gray-250);
      font-family: $font-mono;
      flex-grow: 1;
      font-size: 0.75rem;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;

      span {
        text-overflow: ellipsis;
        overflow: hidden; 
        white-space: nowrap;
      }
    }

    &--Type {
      justify-content: flex-end;
      white-space: nowrap;
    }

    &--GasUsed {
      font-size: 0.75rem;
      text-transform: uppercase;
      color: #fff;
      white-space: nowrap;
      text-align: left;
    }
  }

  &__AliasContainer {
    display: flex;
  }

  &__OwnerLink {
    position: relative;
    z-index: 2;
    transition: mixins.$transition-time-def;
    overflow: hidden;
    border-radius: 4px;

    &:hover {
      background: rgba(255, 255, 255, .1);
    }
  }

  @container (max-width: 660px) {
    &__Column {
      &--Owner {
        width: max-content;

        * {
          display: none;
        }

        .Identifier, .TransactionsListItem__AliasContainer, .Identifier__Avatar, a {
          display: block !important;
        }

        .Identifier__Avatar {
          margin: 0;
        }
      }
    }
  }

  @container (max-width: 400px) {
    padding: 5px 8px;

    &__Column {
      &, .Identifier {
        font-size: 0.563rem;
      }
    }

    &__TypeBadge {
      font-size: 0.438rem !important;
      line-height: 15px;
    }

    &__StatusIcon {
      display: none !important;
    }
  }
}

